--- a/Src/Zing/Zing.Framework.csproj
+++ b/Src/Zing/Zing.Framework.csproj
@@ -99,6 +99,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Environment\Extensions\Models\DefaultExtensionTypes.cs" />
+    <Compile Include="Environment\Extensions\Models\ExtensionDescriptor.cs" />
+    <Compile Include="Environment\Extensions\Models\Feature.cs" />
+    <Compile Include="Environment\Extensions\Models\FeatureDescriptor.cs" />
     <Compile Include="Environment\HostEnvironment.cs" />
     <Compile Include="Environment\IHostEnvironment.cs" />
     <Compile Include="IDependency.cs" />
@@ -120,17 +124,24 @@
     <Compile Include="Mvc\ViewEngines\Razor\WebViewPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Resources\IResourceManager.cs" />
-    <Compile Include="UI\Resources\IResourceManifest.cs" />
-    <Compile Include="UI\Resources\IResourceManifestProvider.cs" />
+    <Compile Include="UI\Resources\IResourceManifest.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="UI\Resources\IResourceManifestProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="UI\Resources\LinkEntry.cs" />
     <Compile Include="UI\Resources\MetaEntry.cs" />
     <Compile Include="UI\Resources\RequireSettings.cs" />
     <Compile Include="UI\Resources\ResourceDefinition.cs" />
-    <Compile Include="UI\Resources\ResourceFilter.cs" />
     <Compile Include="UI\Resources\ResourceLocation.cs" />
     <Compile Include="UI\Resources\ResourceManager.cs" />
-    <Compile Include="UI\Resources\ResourceManifest.cs" />
-    <Compile Include="UI\Resources\ResourceManifestBuilder.cs" />
+    <Compile Include="UI\Resources\ResourceManifest.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="UI\Resources\ResourceManifestBuilder.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="UI\Resources\ResourceRegister.cs" />
     <Compile Include="UI\Resources\ResourceRequiredContext.cs" />
     <Compile Include="WorkContext.cs" />
