--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -11,7 +11,6 @@
             <section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
             <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
         </sectionGroup>
-
         <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" requirePermission="false" />
     </configSections>
     <appSettings>
@@ -30,8 +29,8 @@
                 <add namespace="System.Web.Mvc.Html" />
                 <add namespace="System.Web.Routing" />
                 <add namespace="System.Web.WebPages" />
-                <add namespace="System.Linq"/>
-                <add namespace="System.Collections.Generic"/>
+                <add namespace="System.Linq" />
+                <add namespace="System.Collections.Generic" />
             </namespaces>
         </pages>
     </system.web.webPages.razor>
@@ -47,6 +46,14 @@
                 <add namespace="System.Web.WebPages" />
             </namespaces>
         </pages>
+        <httpHandlers>
+            <!-- see below -->
+            <clear />
+            <add path="*" verb="*" type="System.Web.HttpNotFoundHandler" />
+        </httpHandlers>
+        <httpModules>
+            <!--<add name="WarmupHttpModule" type="Zing.WarmupStarter.WarmupHttpModule, Zing.WarmupStarter, Version=1.0.20, Culture=neutral" />-->
+        </httpModules>
     </system.web>
     <system.webServer>
         <validation validateIntegratedModeConfiguration="false" />
@@ -60,4 +67,12 @@
             <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
         </handlers>
     </system.webServer>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-2.6.3.862" newVersion="2.6.3.862" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>
 </configuration>
