--- a/Src/Zing.Web/Zing.Web.csproj
+++ b/Src/Zing.Web/Zing.Web.csproj
@@ -35,6 +35,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=2.6.3.862, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.2.6.3.862\lib\NET40\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Configuration, Version=2.6.3.862, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.2.6.3.862\lib\NET40\Autofac.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Autofac.Integration.Mvc">
+      <HintPath>..\packages\Autofac.Mvc4.2.6.2.859\lib\NET40\Autofac.Integration.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -138,6 +147,10 @@
     <Content Include="Views\Default1\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Zing.WarmupStarter\Zing.WarmupStarter.csproj">
+      <Project>{1BA83997-B709-4442-81CE-055AD26FF4A7}</Project>
+      <Name>Zing.WarmupStarter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Zing\Zing.Framework.csproj">
       <Project>{9B0546FF-2871-4E97-8448-BB3AD038F0FA}</Project>
       <Name>Zing.Framework</Name>
