--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Src/Zing.Web/bin
 /Src/Zing.Web/obj
 /Src/Zing/Zing.Framework.csproj.user
+/Src/Zing.WarmupStarter/bin
+/Src/Zing.WarmupStarter/obj
