--- a/Src/Zing/packages.config
+++ b/Src/Zing/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Autofac" version="2.6.3.862" targetFramework="net40" />
   <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
 </packages>
