--- a/Src/Zing/Zing.Framework.csproj
+++ b/Src/Zing/Zing.Framework.csproj
@@ -134,11 +134,15 @@
     <Compile Include="Environment\Configuration\ShellSettingsManager.cs" />
     <Compile Include="Environment\Configuration\ShellSettingsSerializer.cs" />
     <Compile Include="Environment\Configuration\TenantState.cs" />
+    <Compile Include="Environment\DefaultHostContainer.cs" />
+    <Compile Include="Environment\DefaultHostEnvironment.cs" />
+    <Compile Include="Environment\DefaultZingShell.cs" />
     <Compile Include="Environment\DefaultZingHost.cs" />
     <Compile Include="Environment\Descriptor\IShellDescriptorManager.cs" />
     <Compile Include="Environment\Descriptor\Models\ShellDescriptor.cs" />
     <Compile Include="Environment\Descriptor\ShellDescriptorCache.cs" />
     <Compile Include="Environment\Extensions\ExtensionEntry.cs" />
+    <Compile Include="Environment\Extensions\ExtensionLoaderCoordinator.cs" />
     <Compile Include="Environment\Extensions\ExtensionLoadingContext.cs" />
     <Compile Include="Environment\Extensions\ExtensionManager.cs" />
     <Compile Include="Environment\Extensions\ExtensionMonitoringCoordinator.cs" />
@@ -151,33 +155,44 @@
     <Compile Include="Environment\Extensions\Models\ExtensionDescriptor.cs" />
     <Compile Include="Environment\Extensions\Models\Feature.cs" />
     <Compile Include="Environment\Extensions\Models\FeatureDescriptor.cs" />
+    <Compile Include="Environment\HostComponentsConfigModule.cs" />
     <Compile Include="Environment\HostEnvironment.cs" />
+    <Compile Include="Environment\IAssemblyLoader.cs" />
+    <Compile Include="Environment\IAssemblyNameResolver.cs" />
+    <Compile Include="Environment\IBuildManager.cs" />
     <Compile Include="Environment\IHostEnvironment.cs" />
     <Compile Include="Environment\IHostLocalRestart.cs" />
+    <Compile Include="Environment\IShim.cs" />
+    <Compile Include="Environment\IZingHostContainer.cs" />
+    <Compile Include="Environment\IZingShellEvents.cs" />
     <Compile Include="Environment\IShellContainerRegistrations.cs" />
     <Compile Include="Environment\IZingHost.cs" />
     <Compile Include="Environment\IZingShell.cs" />
     <Compile Include="Environment\RunningShellTable.cs" />
-    <Compile Include="Environment\ShellBuilder\CompositionStrategy.cs" />
-    <Compile Include="Environment\ShellBuilder\Models\ShellBlueprint.cs" />
-    <Compile Include="Environment\ShellBuilder\ShellContainerFactory.cs" />
-    <Compile Include="Environment\ShellBuilder\ShellContext.cs" />
-    <Compile Include="Environment\ShellBuilder\ShellContextFactory.cs" />
-    <Compile Include="Environment\ShellBuilder\ZingFeatureAttribute.cs" />
-    <Compile Include="Environment\ShellBuilder\ZingSuppressDependencyAttribute.cs" />
+    <Compile Include="Environment\ShellBuilders\CompositionStrategy.cs" />
+    <Compile Include="Environment\ShellBuilders\Models\ShellBlueprint.cs" />
+    <Compile Include="Environment\ShellBuilders\ShellContainerFactory.cs" />
+    <Compile Include="Environment\ShellBuilders\ShellContext.cs" />
+    <Compile Include="Environment\ShellBuilders\ShellContextFactory.cs" />
+    <Compile Include="Environment\ShellBuilders\ZingFeatureAttribute.cs" />
+    <Compile Include="Environment\ShellBuilders\ZingSuppressDependencyAttribute.cs" />
     <Compile Include="Environment\State\DefaultProcessingEngine.cs" />
     <Compile Include="Environment\State\IProcessingEngine.cs" />
     <Compile Include="Environment\WorkContextAccessor.cs" />
     <Compile Include="Environment\WorkContextImplementation.cs" />
     <Compile Include="Environment\WorkContextModule.cs" />
     <Compile Include="Environment\WorkContextProperty.cs" />
+    <Compile Include="Environment\ZingHostContainerRegistry.cs" />
     <Compile Include="Environment\ZingStarter.cs" />
+    <Compile Include="Events\DefaultZingEventBus.cs" />
     <Compile Include="Events\IEventBus.cs" />
     <Compile Include="Events\IEventHandler.cs" />
+    <Compile Include="Exceptions\IExceptionPolicy.cs" />
     <Compile Include="FileSystems\AppData\AppDataFolder.cs" />
     <Compile Include="FileSystems\AppData\IAppDataFolder.cs" />
     <Compile Include="FileSystems\AppData\IAppDataFolderRoot.cs" />
     <Compile Include="FileSystems\Dependencies\IDependenciesFolder.cs" />
+    <Compile Include="FileSystems\Dependencies\IExtensionDependenciesManager.cs" />
     <Compile Include="FileSystems\VirtualPath\DefaultVirtualPathMonitor.cs" />
     <Compile Include="FileSystems\VirtualPath\DefaultVirtualPathProvider.cs" />
     <Compile Include="FileSystems\VirtualPath\ICustomVirtualPathProvider.cs" />
@@ -213,18 +228,44 @@
     <Compile Include="Logging\OrchardFileAppender.cs" />
     <Compile Include="Logging\OrchardLog4netFactory.cs" />
     <Compile Include="Logging\OrchardLog4netLogger.cs" />
+    <Compile Include="Mvc\DataAnnotations\LocalizedModelValidatorProvider.cs" />
+    <Compile Include="Mvc\DataAnnotations\LocalizedRangeAttribute.cs" />
+    <Compile Include="Mvc\DataAnnotations\LocalizedRequiredAttribute.cs" />
+    <Compile Include="Mvc\DataAnnotations\LocalizedReularExpressionAttribute.cs" />
+    <Compile Include="Mvc\DataAnnotations\LocalizedStringMaxLengthAttribute.cs" />
+    <Compile Include="Mvc\Extensions\RouteExtension.cs" />
     <Compile Include="Mvc\Filters\FilterProvider.cs" />
+    <Compile Include="Mvc\HttpContextWorkContext.cs" />
+    <Compile Include="Mvc\IHasRequestContext.cs" />
     <Compile Include="Mvc\IHttpContextAccessor.cs" />
     <Compile Include="Mvc\IZingViewPage.cs" />
+    <Compile Include="Mvc\ModelBinders\IModelBinderProvider.cs" />
+    <Compile Include="Mvc\ModelBinders\IModelBinderPublisher.cs" />
+    <Compile Include="Mvc\ModelBinders\ModelBinderDescriptor.cs" />
+    <Compile Include="Mvc\ModelBinders\ModelBinderPublisher.cs" />
+    <Compile Include="Mvc\Routes\DefaultRouteProvider.cs" />
+    <Compile Include="Mvc\Routes\IRouteProvider.cs" />
+    <Compile Include="Mvc\Routes\IRoutePublisher.cs" />
+    <Compile Include="Mvc\Routes\RouteDescriptor.cs" />
+    <Compile Include="Mvc\Routes\RoutePublisher.cs" />
+    <Compile Include="Mvc\Routes\ShellRoute.cs" />
+    <Compile Include="Mvc\Routes\UrlPrefix.cs" />
+    <Compile Include="Mvc\Routes\UrlPrefixAdjustedHttpContext.cs" />
     <Compile Include="Mvc\Spooling\HtmlStringWriter.cs" />
     <Compile Include="Mvc\ViewEngines\IViewEngineProvider.cs" />
     <Compile Include="Mvc\ViewEngines\Razor\WebViewPage.cs" />
+    <Compile Include="Mvc\Wrappers\HttpContextBaseWrapper.cs" />
+    <Compile Include="Mvc\Wrappers\HttpRequestBaseWrapper.cs" />
+    <Compile Include="Mvc\Wrappers\HttpResponseBaseWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Clock.cs" />
     <Compile Include="Services\IClock.cs" />
     <Compile Include="Services\IHtmlFilter.cs" />
     <Compile Include="Settings\ISite.cs" />
     <Compile Include="Settings\ResourceDebugMode.cs" />
+    <Compile Include="Tasks\BackgroundService.cs" />
+    <Compile Include="Tasks\IBackgroundTask.cs" />
+    <Compile Include="Tasks\ISweepGenerator.cs" />
     <Compile Include="UI\Resources\IResourceManager.cs" />
     <Compile Include="UI\Resources\IResourceManifest.cs">
       <SubType>Code</SubType>
@@ -247,8 +288,18 @@
     <Compile Include="UI\Resources\ResourceRegister.cs" />
     <Compile Include="UI\Resources\ResourceRequiredContext.cs" />
     <Compile Include="Utility\DependencyOrderingUtility.cs" />
+    <Compile Include="Utility\Extensions\HttpRequestExtensions.cs" />
     <Compile Include="Utility\Extensions\ReadOnlyCollectionExtensions.cs" />
+    <Compile Include="Utility\Hash.cs" />
+    <Compile Include="Validation\JetBrains.Annotations.cs" />
     <Compile Include="Validation\PathValidation.cs" />
+    <Compile Include="WebApi\AutofacWebApiDependencyResolver.cs" />
+    <Compile Include="WebApi\AutofacWebApiDependencyScope.cs" />
+    <Compile Include="WebApi\DefaultZingWebApiHttpControllerSelector.cs" />
+    <Compile Include="WebApi\DefaultZingWebApiHttpHttpControllerActivator.cs" />
+    <Compile Include="WebApi\Extensions\RouteExtension.cs" />
+    <Compile Include="WebApi\Routes\IHttpRouteProvider.cs" />
+    <Compile Include="WebApi\Routes\StandardExtensionHttpRouteProvider.cs" />
     <Compile Include="WorkContext.cs" />
     <Compile Include="WorkContextExtensions.cs" />
     <Compile Include="ZingCoreException.cs" />
