--- a/Src/Zing/Zing.Framework.csproj
+++ b/Src/Zing/Zing.Framework.csproj
@@ -43,8 +43,20 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.1.0\lib\net40\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="FluentNHibernate">
+      <HintPath>..\packages\FluentNHibernate.1.3.0.733\lib\FluentNHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="Iesi.Collections">
+      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\packages\NHibernate.3.3.2.4000\lib\Net35\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate.Linq">
+      <HintPath>..\packages\NHibernate.Linq.1.0\lib\NHibernate.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -121,9 +133,35 @@
     <Compile Include="Caching\IVolatileToken.cs" />
     <Compile Include="Caching\Signals.cs" />
     <Compile Include="Caching\Weak.cs" />
+    <Compile Include="Data\Conventions\AggregateAttribute.cs" />
+    <Compile Include="Data\Conventions\AttributeCollectionConvention.cs" />
+    <Compile Include="Data\Conventions\CacheConvention.cs" />
+    <Compile Include="Data\Conventions\CascadeAllDeleteOrphanAttribute.cs" />
+    <Compile Include="Data\Conventions\RecordTableNameConvention.cs" />
+    <Compile Include="Data\Conventions\StringLengthConvention.cs" />
+    <Compile Include="Data\DataModule.cs" />
+    <Compile Include="Data\DefaultDatabaseCacheConfiguration.cs" />
+    <Compile Include="Data\IDatabaseCacheConfiguration.cs" />
     <Compile Include="Data\IRepository.cs" />
-    <Compile Include="Data\ITransactionManager.cs" />
+    <Compile Include="Data\ISessionConfigurationCache.cs" />
+    <Compile Include="Data\ISessionLocator.cs" />
     <Compile Include="Data\Orderable.cs" />
+    <Compile Include="Data\Providers\AbstractDataServicesProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Data\Providers\DataServiceParameters.cs" />
+    <Compile Include="Data\Providers\DataServicesProviderFactory.cs" />
+    <Compile Include="Data\Providers\IDataServicesProvider.cs" />
+    <Compile Include="Data\Providers\IDataServicesProviderFactory.cs" />
+    <Compile Include="Data\Providers\MySqlDataServicesProvider.cs" />
+    <Compile Include="Data\Providers\SessionFactoryParameters.cs" />
+    <Compile Include="Data\Providers\SqlCeDataServicesProvider.cs" />
+    <Compile Include="Data\Providers\SqlServerDataServicesProvider.cs" />
+    <Compile Include="Data\Repository.cs" />
+    <Compile Include="Data\SessionConfigurationCache.cs" />
+    <Compile Include="Data\SessionFactoryHolder.cs" />
+    <Compile Include="Data\SessionLocator.cs" />
+    <Compile Include="Data\TransactionManager.cs" />
     <Compile Include="Environment\AutofacUtil\DynamicProxy2\ConstructorFinderWrapper.cs" />
     <Compile Include="Environment\AutofacUtil\DynamicProxy2\DynamicProxyContext.cs" />
     <Compile Include="Environment\AutofacUtil\DynamicProxy2\DynamicProxyExtensions.cs" />
@@ -241,6 +279,7 @@
     <Compile Include="Mvc\DataAnnotations\LocalizedStringMaxLengthAttribute.cs" />
     <Compile Include="Mvc\Extensions\RouteExtension.cs" />
     <Compile Include="Mvc\Filters\FilterProvider.cs" />
+    <Compile Include="Mvc\Filters\FilterResolvingActionInvoker.cs" />
     <Compile Include="Mvc\HttpContextWorkContext.cs" />
     <Compile Include="Mvc\IHasRequestContext.cs" />
     <Compile Include="Mvc\IHttpContextAccessor.cs" />
@@ -249,12 +288,14 @@
     <Compile Include="Mvc\ModelBinders\IModelBinderPublisher.cs" />
     <Compile Include="Mvc\ModelBinders\ModelBinderDescriptor.cs" />
     <Compile Include="Mvc\ModelBinders\ModelBinderPublisher.cs" />
+    <Compile Include="Mvc\MvcModule.cs" />
     <Compile Include="Mvc\Routes\DefaultRouteProvider.cs" />
     <Compile Include="Mvc\Routes\IRouteProvider.cs" />
     <Compile Include="Mvc\Routes\IRoutePublisher.cs" />
     <Compile Include="Mvc\Routes\RouteDescriptor.cs" />
     <Compile Include="Mvc\Routes\RoutePublisher.cs" />
     <Compile Include="Mvc\Routes\ShellRoute.cs" />
+    <Compile Include="Mvc\Routes\StandardExtensionRouteProvider.cs" />
     <Compile Include="Mvc\Routes\UrlPrefix.cs" />
     <Compile Include="Mvc\Routes\UrlPrefixAdjustedHttpContext.cs" />
     <Compile Include="Mvc\Spooling\HtmlStringWriter.cs" />
@@ -263,6 +304,7 @@
     <Compile Include="Mvc\Wrappers\HttpContextBaseWrapper.cs" />
     <Compile Include="Mvc\Wrappers\HttpRequestBaseWrapper.cs" />
     <Compile Include="Mvc\Wrappers\HttpResponseBaseWrapper.cs" />
+    <Compile Include="Mvc\ZingControllerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Clock.cs" />
     <Compile Include="Services\IClock.cs" />
