--- a/Src/Zing/packages.config
+++ b/Src/Zing/packages.config
@@ -3,5 +3,9 @@
   <package id="Autofac" version="2.6.3.862" targetFramework="net40" />
   <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
+  <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
+  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
+  <package id="NHibernate" version="3.3.2.4000" targetFramework="net40" />
+  <package id="NHibernate.Linq" version="1.0" targetFramework="net40" />
 </packages>
