--- a/Src/Zing/Zing.Framework.csproj
+++ b/Src/Zing/Zing.Framework.csproj
@@ -179,20 +179,32 @@
     <Compile Include="Environment\Descriptor\IShellDescriptorManager.cs" />
     <Compile Include="Environment\Descriptor\Models\ShellDescriptor.cs" />
     <Compile Include="Environment\Descriptor\ShellDescriptorCache.cs" />
+    <Compile Include="Environment\Extensions\Compilers\DefaultProjectFileParser.cs" />
+    <Compile Include="Environment\Extensions\Compilers\IProjectFileParser.cs" />
+    <Compile Include="Environment\Extensions\Compilers\ProjectFileDescriptor.cs" />
+    <Compile Include="Environment\Extensions\DefaultCriticalErrorProvider.cs" />
     <Compile Include="Environment\Extensions\ExtensionEntry.cs" />
     <Compile Include="Environment\Extensions\ExtensionLoaderCoordinator.cs" />
     <Compile Include="Environment\Extensions\ExtensionLoadingContext.cs" />
     <Compile Include="Environment\Extensions\ExtensionManager.cs" />
     <Compile Include="Environment\Extensions\ExtensionMonitoringCoordinator.cs" />
+    <Compile Include="Environment\Extensions\Folder\ExtensionHarvester.cs" />
     <Compile Include="Environment\Extensions\Folder\IExtensionFolders.cs" />
+    <Compile Include="Environment\Extensions\Folder\IExtensionHarvester.cs" />
+    <Compile Include="Environment\Extensions\Folder\ModuleFolders.cs" />
+    <Compile Include="Environment\Extensions\ICriticalErrorProvider.cs" />
     <Compile Include="Environment\Extensions\IExtensionLoaderCoordinator.cs" />
     <Compile Include="Environment\Extensions\IExtensionManager.cs" />
     <Compile Include="Environment\Extensions\IExtensionMonitoringCoordinator.cs" />
+    <Compile Include="Environment\Extensions\Loaders\DynamicExtensionLoader.cs" />
+    <Compile Include="Environment\Extensions\Loaders\ExtensionLoaderBase.cs" />
     <Compile Include="Environment\Extensions\Loaders\IExtensionLoader.cs" />
     <Compile Include="Environment\Extensions\Models\DefaultExtensionTypes.cs" />
     <Compile Include="Environment\Extensions\Models\ExtensionDescriptor.cs" />
     <Compile Include="Environment\Extensions\Models\Feature.cs" />
     <Compile Include="Environment\Extensions\Models\FeatureDescriptor.cs" />
+    <Compile Include="Environment\Features\FeatureManager.cs" />
+    <Compile Include="Environment\Features\IFeatureManager.cs" />
     <Compile Include="Environment\HostComponentsConfigModule.cs" />
     <Compile Include="Environment\HostEnvironment.cs" />
     <Compile Include="Environment\IAssemblyLoader.cs" />
@@ -233,8 +245,10 @@
     <Compile Include="FileSystems\AppData\AppDataFolder.cs" />
     <Compile Include="FileSystems\AppData\IAppDataFolder.cs" />
     <Compile Include="FileSystems\AppData\IAppDataFolderRoot.cs" />
+    <Compile Include="FileSystems\Dependencies\DefaultAssemblyProbingFolder.cs" />
     <Compile Include="FileSystems\Dependencies\DefaultDependenciesFolder.cs" />
     <Compile Include="FileSystems\Dependencies\DefaultExtensionDependenciesManager.cs" />
+    <Compile Include="FileSystems\Dependencies\IAssemblyProbingFolder.cs" />
     <Compile Include="FileSystems\Dependencies\IDependenciesFolder.cs" />
     <Compile Include="FileSystems\Dependencies\IExtensionDependenciesManager.cs" />
     <Compile Include="FileSystems\VirtualPath\DefaultVirtualPathMonitor.cs" />
@@ -342,6 +356,8 @@
     <Compile Include="Utility\DependencyOrderingUtility.cs" />
     <Compile Include="Utility\Extensions\HttpRequestExtensions.cs" />
     <Compile Include="Utility\Extensions\ReadOnlyCollectionExtensions.cs" />
+    <Compile Include="Utility\Extensions\StringExtensions.cs" />
+    <Compile Include="Utility\Extensions\VirtualPathProviderExtensions.cs" />
     <Compile Include="Utility\Hash.cs" />
     <Compile Include="Validation\JetBrains.Annotations.cs" />
     <Compile Include="Validation\PathValidation.cs" />
