--- a/Src/Zing/Zing.Framework.csproj
+++ b/Src/Zing/Zing.Framework.csproj
@@ -141,6 +141,10 @@
     <Compile Include="Caching\IVolatileToken.cs" />
     <Compile Include="Caching\Signals.cs" />
     <Compile Include="Caching\Weak.cs" />
+    <Compile Include="Data\IRepository.cs" />
+    <Compile Include="Data\ISessionLocator.cs" />
+    <Compile Include="Data\Repository.cs" />
+    <Compile Include="Data\SessionFactoryHolder.cs" />
     <Compile Include="Environment\Configuration\IShellSettingsManager.cs" />
     <Compile Include="Environment\Configuration\ShellSettings.cs" />
     <Compile Include="Environment\Configuration\ShellSettingsManager.cs" />
@@ -194,6 +198,7 @@
     <Compile Include="Mvc\Routes\ShellRoute.cs" />
     <Compile Include="Mvc\ViewEngines\Razor\WebViewPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\Extensions\ReadOnlyCollectionExtensions.cs" />
     <Compile Include="Validation\JetBrains.Annotations.cs" />
     <Compile Include="Validation\PathValidation.cs" />
     <Compile Include="WorkContext.cs" />
