--- a/Src/packages/repositories.config
+++ b/Src/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Zing.Framework.Tests\packages.config" />
+  <repository path="..\Zing.Module\packages.config" />
   <repository path="..\Zing.Web\Core\packages.config" />
   <repository path="..\Zing.Web\Modules\Hello\packages.config" />
   <repository path="..\Zing.Web\packages.config" />
