--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
-/Src/Zing.Web/*.user
-/Src/*.suo
-/Src/Zing/bin
-/Src/Zing/obj
-/Src/Zing.Web/bin
-/Src/Zing.Web/obj
+# Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
+bin
+obj
+
+*.user
+*.suo
+ 
+ 
 /Src/Zing/Zing.Framework.csproj.user
-/Src/Zing.WarmupStarter/bin
-/Src/Zing.WarmupStarter/obj
-/Src/Zing.Web/Core/bin
-/Src/Zing.Web/Core/obj
-/Src/Zing.Web/Modules/Hello/bin
-/Src/Zing.Web/Modules/Hello/obj
-/Src/Zing.Framework.Tests/bin
-/Src/Zing.Framework.Tests/obj
+ 
 /Src/Zing.Web/App_Data/Logs
+ 
