--- a/Src/Zing.Module/packages.config
+++ b/Src/Zing.Module/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.1.1" targetFramework="net40" />
+  <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
-  <package id="MvcExtensions" version="2.5.1" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="MvcExtensions.FluentMetadata" version="3.0.0-alpha1029" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
