--- a/Src/Zing.Web/packages.config
+++ b/Src/Zing.Web/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="MvcExtensions.FluentMetadata" version="3.0.0-alpha1029" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="routedebugger" version="2.1.4.0" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net40" />
