--- a/Src/Zing/packages.config
+++ b/Src/Zing/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.1.1" targetFramework="net40" />
+  <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
@@ -10,6 +11,7 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="MvcExtensions.FluentMetadata" version="3.0.0-alpha1029" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
   <package id="NHibernate.Linq" version="1.0" targetFramework="net40" />
