--- a/Src/Zing.Web/Web.config
+++ b/Src/Zing.Web/Web.config
@@ -23,7 +23,7 @@
     <add key="RouteDebugger:Enabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="conn" providerName="SqlServer" connectionString="Data Source=phoenix-pc\sql2008_new;Initial Catalog=Orchard;Persist Security Info=True;User ID=sa;Password=050915@hf" />
+    <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=phoenix;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=sa" />
   </connectionStrings>
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
@@ -34,6 +34,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="System.Web.Optimization"/>
         <add namespace="System.Linq" />
         <add namespace="System.Collections.Generic" />
       </namespaces>
@@ -58,17 +59,19 @@
     </pages>
     <httpHandlers>
       <!-- see below -->
-      <clear />
-      <add path="*" verb="*" type="System.Web.HttpNotFoundHandler" />
+      <!--<clear />
+      <add path="*" verb="*" type="System.Web.HttpNotFoundHandler" />-->
     </httpHandlers>
     <httpModules>
       <add name="WarmupHttpModule" type="Zing.WarmupStarter.WarmupHttpModule, Zing.WarmupStarter, Version=1.0.20, Culture=neutral" />
     </httpModules>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" />
-
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules runAllManagedModulesForAllRequests="false">
+      <remove name="WarmupHttpModule"/>
+      <add name="WarmupHttpModule" type="Orchard.WarmupStarter.WarmupHttpModule, Orchard.WarmupStarter, Version=1.7, Culture=neutral"/>
+    </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
