--- a/Src/Zing.Web/packages.config
+++ b/Src/Zing.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.30506.0" targetFramework="net40" />
@@ -21,4 +22,5 @@
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="routedebugger" version="2.1.4.0" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net40" />
+  <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
