--- a/Src/Zing.Framework.Tests/Zing.Framework.Tests.csproj
+++ b/Src/Zing.Framework.Tests/Zing.Framework.Tests.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Autofac">
       <HintPath>..\packages\Autofac.3.1.1\lib\net40\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -65,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <Content Include="Config\log4net.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
