--- a/Src/Zing.Framework.Tests/app.config
+++ b/Src/Zing.Framework.Tests/app.config
@@ -1,5 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" requirePermission="false" />
+  </configSections>
+
+  <appSettings>
+    <add key="log4net.Config" value="Config\log4net.config" />
+  </appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=phoenix-pc\sql2008_new;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=050915@hf" />
+  </connectionStrings>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
