--- a/Src/Zing.Module/packages.config
+++ b/Src/Zing.Module/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.1.1" targetFramework="net40" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
+  <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
