--- a/Src/Zing.Web/packages.config
+++ b/Src/Zing.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.1.1" targetFramework="net40" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
+  <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
