--- a/Src/Zing/packages.config
+++ b/Src/Zing/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.1.1" targetFramework="net40" />
   <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net40" />
+  <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
