--- a/Src/Zing.Framework.Tests/app.config
+++ b/Src/Zing.Framework.Tests/app.config
@@ -8,7 +8,7 @@
     <add key="log4net.Config" value="Config\log4net.config" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=phoenix-pc\sql2008_new;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=050915@hf" />
+    <add name="DefaultConnection" providerName="SqlServer" connectionString="Data Source=.;Initial Catalog=zing.security;Persist Security Info=True;User ID=sa;Password=sa" />
   </connectionStrings>
 
   <runtime>
