--- a/Src/Zing.Framework.Tests/Zing.Framework.Tests.csproj
+++ b/Src/Zing.Framework.Tests/Zing.Framework.Tests.csproj
@@ -69,7 +69,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ContainerTestBase.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="DataTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
